Fix filter flickering on refresh

--- a/src/components/AppSummary/_AppSummary.scss
+++ b/src/components/AppSummary/_AppSummary.scss
@@ -20,7 +20,7 @@
     display: flex;
     flex-wrap: wrap;
     max-width: 1000px;
-    min-height: 390px;
+    min-height: 441px;
     align-items: flex-start;
     justify-content: space-between;
     margin-bottom: 35px;
@@ -112,7 +112,7 @@
       .loading-container {
         display: flex;
         margin-top: -4px;
-        min-height: 320px;
+        min-height: 387px;
 
         .loading {
           margin: auto;
@@ -160,7 +160,7 @@
         }
 
         svg {
-          margin-top: -3px;
+          margin-top: -2px;
           margin-right: 5px;
         }
       }
@@ -291,7 +291,7 @@
 
   .loading-container {
     display: flex;
-    min-height: 320px;
+    min-height: 387px;
 
     .loading {
       margin: auto;
